# well-play-teen

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CNAME  MANIFEST.in  Makefile  README.md  conf.py  genindex.html  index.html  index.rst  make.bat  objects.inv  pyproject.toml  requirements.txt  robots.txt  search.html  searchindex.js
.github/workflows/: bot.yaml  doc.yaml  pytest.yaml  style.yaml  website.yaml
_static/: insipid-sidebar.js
_static/css/: style.ss
doc/_static/: style.css
notebooks/: barplot.ipynb  barplot_day.ipynb  catplot.ipynb  introduction.ipynb  plots.ipynb  select_gametimes.ipynb
src/: conf.py  index.rst  links.inc
src/_static/: style.css
staging/: contact.html  faq.html  genindex.html  index.html  objects.inv  people.html  search.html  searchindex.js
website/: conf.py  contact.rst  faq.rst  index.rst  links.inc  make.bat  people.rst
website/_static/: style.css
website/_templates/: footer.html  layout.html  logos.html  navbar-nav.html  participate.html
wp/: __init__.py  config.py  conftest.py  gametime.py  viz.py
wp/commands/: gametime.py  gametime_plot.py
wp/gametime/: __init__.py  _config.py  acquisition.py  selection.py  viz.py
wp/gametime/tests/: test_acquisition.py  test_gametime.py  test_selection.py  test_viz.py
wp/gametime/tests/data/: metadata.csv
wp/randomization/: __init__.py  average.py  minvar.py
wp/randomization/tests/: test_average.py  test_minvar.py
wp/tests/: test_gametime.py  test_viz.py
wp/tests/data/: gametime.csv
wp/utils/: __init__.py  _checks.py  _docs.py  config.py  dataframe.py  logs.py  viz.py
wp/utils/tests/: test_checks.py  test_config.py  test_dataframe.py  test_docs.py  test_imports.py  test_logs.py  test_viz.py
